# Phelsuma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BasicModel3D.h  Data3D.h  PhongDirectionalLight.h  PhongLightParameters.h  PhongLightScene.h  PhongObject3D.h  PhongPointLight.h  PhongSpotlight.h  Shader.h  ShaderCompiler.h  ShaderProgram.h  ShaderProgramLinker.h  StackAllocator.h  Texture.h  Texture2D.h  UBOBuilder.h  WorldObject3D.h
include/examples/: Utils.h
include/glad/: glad.h
shaders/: box.fs  box.vs  light.fs.glsl  light.vs  light.vs.glsl  phong.fs  phong.vs  phong.vs.glsl  phongScene.fstpl.glsl  phongScene.vstpl  simple.fs  simple.fs.glsl  simple.vs
src/: BasicModel3D.cpp  Data3D.cpp  Main.cpp  PhongLightScene.cpp  PhongObject3D.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderProgram.cpp  ShaderProgramLinker.cpp  StackAllocator.cpp  Texture2D.cpp  UBOBuilder.cpp  WorldObject3D.cpp  glad.c
src/ColoredTexTriangle/: Main.cpp
src/LightingBoxes/: Main.cpp
src/LightingBoxesPhongScene/: Main.cpp
src/PointCloud3D/: Main.cpp
src/RotatingBox/: Main.cpp
