CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.1)

SET(CMAKE_CXX_STANDARD 14)
PROJECT(Phelsuma)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)

INCLUDE_DIRECTORIES(
  "${PROJECT_SOURCE_DIR}/include"
  ${glfw3_INCLUDE_DIR}
  ${PHELSUMA_SCE_VECTORMATH_PATH}
)

IF(NOT PHELSUMA_BUILD_EXAMPLES)
  OPTION(PHELSUMA_BUILD_EXAMPLES "Build included examples" ON)
ENDIF()

IF(NOT PHELSUMA_SCE_VECTORMATH_PATH)
  SET(PHELSUMA_SCE_VECTORMATH_PATH "")
ENDIF()

# GLAD:
ADD_LIBRARY(glad "${PHELSUMA_GLAD_SRC_PATH}/glad.c")
TARGET_INCLUDE_DIRECTORIES(glad PRIVATE ${PHELSUMA_GLAD_INCLUDE_PATH})

SET(ENGINE_CPPFILES src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)

# Engine:
ADD_LIBRARY(${PROJECT_NAME} ${ENGINE_CPPFILES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PHELSUMA_GLAD_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} glad ${CMAKE_DL_LIBS})

# Examples:
IF (PHELSUMA_BUILD_EXAMPLES)
  ADD_EXECUTABLE(ColoredTexTriangle src/ColoredTexTriangle/Main.cpp)
  ADD_EXECUTABLE(PointCloud3D src/PointCloud3D/Main.cpp)
  TARGET_LINK_LIBRARIES(ColoredTexTriangle glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
  TARGET_LINK_LIBRARIES(PointCloud3D glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
ENDIF()
