CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.1)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 14)
PROJECT(Phelsuma)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPHELSUMA_DEBUG_OGL")

INCLUDE_DIRECTORIES(
  "${PROJECT_SOURCE_DIR}/include"
  ${glfw3_INCLUDE_DIR}
  ${PHELSUMA_SCE_VECTORMATH_PATH}
)

IF(NOT PHELSUMA_BUILD_EXAMPLES)
  OPTION(PHELSUMA_BUILD_EXAMPLES "Build included examples" ON)
ENDIF()

IF(NOT PHELSUMA_SCE_VECTORMATH_PATH)
  SET(PHELSUMA_SCE_VECTORMATH_PATH "")
ENDIF()

# GLAD:
ADD_LIBRARY(glad "${PHELSUMA_GLAD_SRC_PATH}/glad.c")
TARGET_INCLUDE_DIRECTORIES(glad PRIVATE ${PHELSUMA_GLAD_INCLUDE_PATH})

SET(ENGINE_CPPFILES src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp src/BasicModel3D.cpp src/Data3D.cpp src/Texture2D.cpp src/WorldObject3D.cpp src/PhongLightScene.cpp src/PhongObject3D.cpp)

# Engine:
ADD_LIBRARY(${PROJECT_NAME} ${ENGINE_CPPFILES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${PHELSUMA_GLAD_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} glad ${CMAKE_DL_LIBS})

# Examples:
IF (PHELSUMA_BUILD_EXAMPLES)
  ADD_EXECUTABLE(ColoredTexTriangle src/ColoredTexTriangle/Main.cpp)
  ADD_EXECUTABLE(PointCloud3D src/PointCloud3D/Main.cpp)
  ADD_EXECUTABLE(RotatingBox src/RotatingBox/Main.cpp)
  ADD_EXECUTABLE(LightingBoxes src/LightingBoxes/Main.cpp)
  ADD_EXECUTABLE(LightingBoxesPhongScene src/LightingBoxesPhongScene/Main.cpp)

  TARGET_LINK_LIBRARIES(ColoredTexTriangle glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
  TARGET_LINK_LIBRARIES(PointCloud3D glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
  TARGET_LINK_LIBRARIES(RotatingBox glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
  TARGET_LINK_LIBRARIES(LightingBoxes glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
  TARGET_LINK_LIBRARIES(LightingBoxesPhongScene glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
ENDIF()
